[tool.poetry]
name = "task-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.5.0"
sqlalchemy = "^2.0.29"
loguru = "^0.7.2"
pydantic-settings = "^2.2.1"
qrcode = "^7.4.2"
pytoniq-core = "^0.1.32"
pytonconnect = "^0.3.1"
alembic = "^1.13.1"
pytoniq = "^0.1.35"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
